[gin-tuto] mail to email in codes
